# dreams

./: .gitmodules  CMakeLists.txt
assets/: CMakeLists.txt
assets/models/: CMakeLists.txt
assets/textures/: CMakeLists.txt
include/: config.hpp  constants.hpp  utils.hpp
include/entity/: id.hpp  ticker.hpp  word_ticker.hpp
include/entity/components/: camera.hpp  collision.hpp  light.hpp  model.hpp  player.hpp  position.hpp  renderable.hpp  rotation.hpp  velocity.hpp
include/entity/helpers/: collision.hpp
include/render/: debug.hpp  font_renderer.hpp  gui_render_context.hpp  model.hpp  obj_loader.hpp  phase.hpp  resource_loader.hpp  texture.hpp  utils.hpp  window.hpp
include/render/phases/: loading_screen.hpp  render_test.hpp
opt/: obj_loader.cpp
shaders/: CMakeLists.txt  loading.frag  text.frag  text.geom  text.vert
shaders/test/: hitbox.frag  hitbox.vert  render.frag  render.vert  shade.frag  shade.vert
src/: main.cpp  utils.cpp
src/entity/: ticker.cpp  word_ticker.cpp
src/entity/helpers/: collision.cpp
src/render/: font_renderer.cpp  gui_render_context.cpp  model.cpp  phase.cpp  resource_loader.cpp  texture.cpp  utils.cpp  window.cpp
src/render/phases/: loading_screen.cpp  render_test.cpp
